// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb should render item 1`] = `
<div class="breadcrumb">
  <div class="content">
    <icon-stub name="g"></icon-stub> <span>g</span>
  </div>
</div>
`;

exports[`Breadcrumb should render router-link for link 1`] = `
<div class="breadcrumb">
  <router-link-stub to="/g" class="content has-link">
    <icon-stub name="g"></icon-stub> <span>g</span>
  </router-link-stub>
</div>
`;
